Changelog

5.5.0

"messi messi messi immens messi encara messi encara messi encara messi"

Create Big Cannons 5.5.0, with a few bug fixes and minor changes.
Comes with version formatting change, but gameplay changes are otherwise not major.

Added:
- Added some config options to use subheadings in Create config screen
- Added durability and fuze position tooltip to Impact Fuze and Delayed Impact Fuze
- Added config to switch between cannon trail styles
- Added cannon trail particle
 - By default appears the same as campfire smoke
 - Particle texture definition can be changed
- Added new style for autocannon plumes (createbigcannons:autocannon_plume) and drop mortar plumes (createbigcannons:drop_mortar_plume) separate from big cannon plume (createbigcannons:big_cannon_plume)
 - Added separate clientside visibility config options for these plumes
- Added Drop Mortar Shell and Smoke Shell to "Fuzing Munitions" ponder
- Added Drop Mortar Shell, Fluid Shell, and Smoke Shell to Munitions ponder tag
- Added Cannon Loads ponder to Big Cartridge
- Added item tooltips for Smoke Shell
- Added contained fluid tooltip for Fluid Shell item
- Added fuze tooltips for fuzed big cannon munitions
- Added filled Big Cartridge to creative search tab
- Added separate config for screen shake intensity
- Added ability to add Tracer Tips to big cannon projectiles
 - Added config to make all big cannon projectiles have tracers regardless if they have tracers, where applicable
 - Solid Shot and AP Shot now have block entities to allow tracer placement. Blocks missing them may need to be replaced.
- Added screen shake config options
 - Screen shake intensity (client)
 - Screen shake range (server)
 - Screen shake power (server)
 - Screen shake propagation speed (server)
  - The faster it is, the less delay there is for players at a distance
Removed:
- Removed legacy cannon plume appearance client config, can now only turn plumes on or off in clientside config
Changed: